[package]
name = "quaru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0"}
num = "0.4.0"
rand = "0.8.5"
inquire = "0.5.3"
clap = { version = "4.1.6", features = ["derive"] }
openqasm-parser = "1.0.0"

[features]
blas = ["ndarray/blas"]

[dev-dependencies]
proptest = "1.1.0"



