[package]
name = "quaru"
version = "1.0.0"
edition = "2021"
rust-version = "1.67.0"
license = "MIT"
description = "A quantum computer simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6"}
num = "0.4.0"
rand = "0.8.5"
gcd = "2.3.0"
stopwatch = "0.0.7"
colored = "2.0.0"
log = "0.4.17"
env_logger = "0.10.0"

inquire = "0.5.3"
clap = { version = "4.1.6", features = ["derive"] }
openqasm-parser = "1.0.0"

[features]
blas = ["ndarray/blas"]

[dev-dependencies]
proptest = "1.1.0"

[[example]]
name = "grovers"
test = true

[[example]]
name = "shors"
test = true

[[example]]
name = "openqasm_example"
test = true

[[example]]
name = "quantum_teleportation"
test = true

[[example]]
name = "superdense_coding"
test = true
